<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrackPlayerFragment">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/album_photo"
            android:layout_width="@dimen/large_album_dim"
            android:layout_height="@dimen/large_album_dim"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_album_photo" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <SeekBar
            android:id="@+id/player_scrubber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scrubber_vertical_margin"
            android:layout_marginBottom="@dimen/scrubber_vertical_margin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/track_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="end"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_description_loading"
            android:textSize="34sp"
            android:textStyle="italic"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/player_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/player_previous"
                android:layout_width="@dimen/player_button_dim"
                android:layout_height="@dimen/player_button_dim"
                android:padding="@dimen/activity_horizontal_margin"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_media_previous"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/content_description_previous" />
            <ImageButton
                android:id="@+id/player_play"
                android:layout_width="@dimen/player_button_dim"
                android:layout_height="@dimen/player_button_dim"
                android:padding="@dimen/activity_horizontal_margin"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_media_play"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/content_description_play" />
            <ImageButton
                android:id="@+id/player_pause"
                android:visibility="gone"
                android:layout_width="@dimen/player_button_dim"
                android:layout_height="@dimen/player_button_dim"
                android:padding="@dimen/activity_horizontal_margin"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_media_pause"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/content_description_pause" />
            <ImageButton
                android:id="@+id/player_next"
                android:layout_width="@dimen/player_button_dim"
                android:layout_height="@dimen/player_button_dim"
                android:padding="@dimen/activity_horizontal_margin"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_media_next"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/content_description_next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
